[gd_scene load_steps=4 format=2]

[ext_resource path="res://recursos/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/nave.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 147.007

[node name="nave" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 26.6667 )
shape = SubResource( 1 )

[node name="pos" type="Position2D" parent="."]
position = Vector2( 0, -143.333 )

[node name="pos_esq" type="Position2D" parent="."]
position = Vector2( -50, 0 )

[node name="pos_dir" type="Position2D" parent="."]
position = Vector2( 50, 0 )

[node name="area" type="Area2D" parent="."]
rotation = -6.28319
collision_mask = 2

[node name="shape2" type="CollisionShape2D" parent="area"]
position = Vector2( 3.33333, 1.52588e-05 )
shape = SubResource( 1 )

[connection signal="area_entered" from="area" to="." method="_on_area_area_entered"]
